tests/snapshots/test_repo_variants__cargo_workspace_monorepo_classification_and_render@cargo_workspace_monorepo_struct.snap
---
source: tests/test_repo_variants.rs
expression: "& view"
---
ReleaseUnitView {
    bundles: [],
    units: [],
    externally_managed: [],
    needs_decision: [],
    groups: [],
}
