tests/snapshots/test_repo_variants__hexagonal_cargo_classification_and_render@hexagonal_cargo_prepare_render.snap
---
source: tests/test_repo_variants.rs
expression: "& rendered"
---
 ⬢  Bundles
    ● apps/services/aura  hexagonal-cargo/bin
