tests/snapshots/test_repo_variants__jvm_sdk_classification_and_render@jvm_sdk_prepare_render.snap
---
source: tests/test_repo_variants.rs
expression: "& rendered"
---
 ⬢  Bundles
    ● libs/main  jvm-library/gradle.properties
