tests/snapshots/test_repo_variants__jvm_sdk_classification_and_render@jvm_sdk_struct.snap
---
source: tests/test_repo_variants.rs
expression: "& view"
---
ReleaseUnitView {
    bundles: [
        BundleRow {
            label: "libs/main",
            kind_label: "jvm-library/gradle.properties",
            ecosystem: "kotlin",
            path: RepoPathBuf(
                [
                    108,
                    105,
                    98,
                    115,
                    47,
                    109,
                    97,
                    105,
                    110,
                ],
            ),
            selected: true,
        },
    ],
    units: [],
    externally_managed: [],
    needs_decision: [],
    groups: [],
}
