tests/snapshots/test_repo_variants__mobile_only_classification_and_render@mobile_only_init_render.snap
---
source: tests/test_repo_variants.rs
expression: "& rendered"
---
 ◇  Externally-managed
    — app  iOS app — auto [allow_uncovered]
