tests/snapshots/test_repo_variants__mobile_only_classification_and_render@mobile_only_struct.snap
---
source: tests/test_repo_variants.rs
expression: "& view"
---
ReleaseUnitView {
    bundles: [],
    units: [],
    externally_managed: [
        ExtRow {
            label: "app",
            kind_label: "iOS app — auto [allow_uncovered]",
            ecosystem: "swift",
            path: RepoPathBuf(
                [
                    97,
                    112,
                    112,
                ],
            ),
        },
    ],
    needs_decision: [],
    groups: [],
}
