tests/snapshots/test_repo_variants__nested_submodule_classification_and_render@nested_submodule_struct.snap
---
source: tests/test_repo_variants.rs
expression: "& view"
---
ReleaseUnitView {
    bundles: [],
    units: [],
    externally_managed: [],
}
