tests/snapshots/test_repo_variants__polyglot_classification_and_render@polyglot_init_render.snap
---
source: tests/test_repo_variants.rs
expression: "& rendered"
---
 ⬢  Bundles
    ● apps/services/aura   hexagonal-cargo/bin
    ● apps/services/mondo  hexagonal-cargo/workers
    ● apps/desktop         tauri (single-source)
    ● sdks/kotlin          jvm-library/gradle.properties

 ◇  Externally-managed
    — apps/mobile-ios      iOS app — auto [allow_uncovered]
