tests/snapshots/test_repo_variants__polyglot_classification_and_render@polyglot_struct.snap
---
source: tests/test_repo_variants.rs
expression: "& view"
---
ReleaseUnitView {
    bundles: [
        BundleRow {
            label: "apps/services/aura",
            kind_label: "hexagonal-cargo/bin",
            ecosystem: "hexagonal-cargo",
            path: RepoPathBuf(
                [
                    97,
                    112,
                    112,
                    115,
                    47,
                    115,
                    101,
                    114,
                    118,
                    105,
                    99,
                    101,
                    115,
                    47,
                    97,
                    117,
                    114,
                    97,
                ],
            ),
            selected: true,
        },
        BundleRow {
            label: "apps/services/mondo",
            kind_label: "hexagonal-cargo/workers",
            ecosystem: "hexagonal-cargo",
            path: RepoPathBuf(
                [
                    97,
                    112,
                    112,
                    115,
                    47,
                    115,
                    101,
                    114,
                    118,
                    105,
                    99,
                    101,
                    115,
                    47,
                    109,
                    111,
                    110,
                    100,
                    111,
                ],
            ),
            selected: true,
        },
        BundleRow {
            label: "apps/desktop",
            kind_label: "tauri (single-source)",
            ecosystem: "tauri",
            path: RepoPathBuf(
                [
                    97,
                    112,
                    112,
                    115,
                    47,
                    100,
                    101,
                    115,
                    107,
                    116,
                    111,
                    112,
                ],
            ),
            selected: true,
        },
        BundleRow {
            label: "sdks/kotlin",
            kind_label: "jvm-library/gradle.properties",
            ecosystem: "kotlin",
            path: RepoPathBuf(
                [
                    115,
                    100,
                    107,
                    115,
                    47,
                    107,
                    111,
                    116,
                    108,
                    105,
                    110,
                ],
            ),
            selected: true,
        },
    ],
    units: [],
    externally_managed: [
        ExtRow {
            label: "apps/mobile-ios",
            kind_label: "iOS app — auto [allow_uncovered]",
            ecosystem: "swift",
            path: RepoPathBuf(
                [
                    97,
                    112,
                    112,
                    115,
                    47,
                    109,
                    111,
                    98,
                    105,
                    108,
                    101,
                    45,
                    105,
                    111,
                    115,
                ],
            ),
        },
    ],
    needs_decision: [],
    groups: [],
}
