tests/snapshots/test_repo_variants__tauri_app_classification_and_render@tauri_app_prepare_render.snap
---
source: tests/test_repo_variants.rs
expression: "& rendered"
---
 ⬢  Bundles
    ● apps/desktop  tauri (single-source)
